Ensure project runs/compiles under Java21